Revert "Fix padding issue on iPhone 7"
This reverts commit b1067bbcc6ce6fcbf162d507578cf9d46bbf0c57.

--- a/css/components/_table.scss
+++ b/css/components/_table.scss
@@ -12,7 +12,7 @@
 
     tbody {
       display: block;
-      max-width: calc(100vw - 60px);
+      max-width: calc(100vw - 30px);
       overflow-x: auto;
     }
 
